infra/local/k8s/05-gateway-adapter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-adapter
  namespace: paymyseat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-adapter
  template:
    metadata:
      labels:
        app: gateway-adapter
    spec:
      containers:
        - name: gateway-adapter
          image: gateway_adapter:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-adapter
  namespace: paymyseat
spec:
  ports:
    - port: 5001
  selector:
    app: gateway-adapter
